--- a/WeatherService/WeatherService/WeatherService.vcxproj
+++ b/WeatherService/WeatherService/WeatherService.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="WeatherService.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="json.hpp" />
     <ClInclude Include="JsonService.h" />
     <ClInclude Include="Service.h" />
     <ClInclude Include="Weather.h" />
