--- a/WeatherService/WeatherService/WeatherService.vcxproj
+++ b/WeatherService/WeatherService/WeatherService.vcxproj
@@ -130,12 +130,15 @@
     <ClCompile Include="JsonService.cpp" />
     <ClCompile Include="Weather.cpp" />
     <ClCompile Include="WeatherService.cpp" />
+    <ClCompile Include="XmlService.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="json.hpp" />
     <ClInclude Include="JsonService.h" />
+    <ClInclude Include="pugixml-1.13\src\pugixml.hpp" />
     <ClInclude Include="Service.h" />
     <ClInclude Include="Weather.h" />
+    <ClInclude Include="XmlService.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
